--- a/css/styles.css
+++ b/css/styles.css
@@ -425,11 +425,77 @@ h1.welcome {
   text-align: center; }
 
 h2 {
-  padding: 0 2%; }
+  padding: 0;
+  margin: 10% 0;
+  text-align: center; }
+
+.flexed {
+  justify-content: space-evenly;
+  margin: 5% 0% 0 0%; }
+
+.small-5 {
+  border-style: solid white;
+  border-width: 1.5px;
+  box-shadow: 2px 2px 10px black;
+  padding: 0;
+  margin: 0 0 5% 0; }
+
+.small-8 {
+  border-style: solid white;
+  border-width: 1.5px;
+  box-shadow: 2px 2px 10px black;
+  padding: 0;
+  margin: 0 0 5% 0;
+  background-color: #ac1010;
+  color: white;
+  text-shadow: 1px 1px 3px black; }
+
+.small-10 {
+  border-style: solid white;
+  border-width: 1.5px;
+  box-shadow: 2px 2px 10px black;
+  padding: 0;
+  margin: 0 0 5% 0;
+  background-color: #0b497c;
+  color: white;
+  text-shadow: 1px 1px 3px black; }
+
+figure {
+  width: 100%;
+  padding: 0;
+  margin: 0; }
+
+.lawyer {
+  margin: 0;
+  padding: 0;
+  max-width: 100%; }
+
+.learn {
+  width: 60%;
+  height: auto;
+  padding: 0;
+  margin: auto;
+  margin-bottom: 10%;
+  margin-top: 10%;
+  display: block; }
+
+.blog {
+  width: 100%; }
+
+.read {
+  width: 50%;
+  height: auto;
+  padding: 2%;
+  margin: auto;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  display: block; }
 
 p {
   font-weight: 400;
-  padding: 0 2%; }
+  padding: 0;
+  margin: 0;
+  width: 100%; }
 
 footer {
   text-align: center;
