added medium style

--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -8,6 +8,20 @@
     }
   }
 
+  div.flexed {display: flex; flex-wrap: wrap;}
+
+  @for $i from 1 through 12 {
+          $w:($i / 12) * 100%;
+          .medium-#{$i} {flex-basis: $w;}	
+  } // end loop
+
+  h2 {
+    padding: 2%;
+  }
+
+  .tipDay {
+    margin: 1%;
+  }
   // div.headerWrapper {
     
   // }
