--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -22,9 +22,18 @@ body {
     margin: auto;
   } 
 
-  
+  div.flexed {display: flex; flex-wrap: wrap;}
+
+  @for $i from 1 through 12 {
+          $w:($i / 12) * 100%;
+          .large-#{$i} {flex-basis: $w;}	
+  } // end loop
 
   main {
     margin: auto;
     max-width: 75rem;
+  }
+
+  .attourney {
+    padding: 2%;
   }
