--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -56,6 +56,11 @@ button {
   width: 50px;
 }
 
+button:hover {
+  color: white;
+  background-color: $primaryColor;
+}
+
 nav {
   margin: 0;
   padding: 0;
@@ -123,6 +128,7 @@ h2{
 
 .flexed {
   display: flex;
+  justify-content: center;
 }
 
 .attourney {
